--- a/app/views/manager/clients.erb
+++ b/app/views/manager/clients.erb
@@ -1,43 +1,1 @@
-<table border="1" cellspacing="0" cellpadding="4">
-  <caption>Клиенты</caption>
-  <br>
-<tr>
-  <%#<td>№ п/п</td>%>
-  <td>№ договора</td>
-  <td>Организация</td>
-  <td>ФИО заказчика</td>
-  <td>ИНН</td>
-  <td>КПП</td>
-  <td>р/c</td>
-  <td>Банк</td>
-  <td>к/с</td>
-  <td>Телефон</td>
-  <td>Юридический адрес</td>
-  <td>Физический адрес</td>
-  <td>БИК</td>
-  <td>П</td>
-  <td>У</td>
-
-</tr>
-
-<% for order in Order.find(:all) %>
-  <tr>
-    <td><%= order.d_no %></td>
-    <td><%= order.client.cl_org %> </td>
-    <td><%= order.client.cl_fio %></td>
-    <td><%= order.client.cl_inn%> </td>
-    <td><%= order.client.cl_kpp%> </td>
-    <td><%= order.client.cl_adrur%> </td>
-    <td><%= order.client.cl_adrfiz%> </td>
-    <td><%= order.client.cl_rs%> </td>
-    <td><%= order.client.cl_ks%> </td>
-    <td><%= order.client.cl_tel%> </td>
-    <td><%= order.client.cl_bik%> </td>
-    <td><%= order.client.cl_bank%> </td>
-    <td><a href="">печать</a> </td>
-    <td><a href="">Удалить</a> </td>
-  </tr>
-<% end %>
-  
-</table>
-
+<h1>Клиенты</h1>
