--- a/app/views/manager/catalogs.erb
+++ b/app/views/manager/catalogs.erb
@@ -1,6 +1,5 @@
-<h1>Каталог товаров</h1>
+<h1 class="zagatpage" align="center">Просмотр каталога товаров</h1>
 <table border="1" cellspacing="0" cellpadding="4">
-  <caption>Просмотр каталога товаров</caption>
   <tr>
     <td>Артикул</td>
     <td>Наименование</td>
