--- a/app/views/manager/clients.erb
+++ b/app/views/manager/clients.erb
@@ -1,1 +1,12 @@
-<h1>Клиенты</h1>
+<h1 class="zagatpage" align="center">Редактирование данных о клиенте</h1>
+
+
+<% form_for :update_type do |s| %>
+        <%= s.radio_button("type", "delc", :checked => true) %>Искать для удаления<br/>
+        <%= s.radio_button("type", "updc") %>Искать для редактирования<br/><br/>
+
+        <%= submit_tag "Искать" %>
+        
+    <%end%>
+    
+
