--- a/app/views/manager/orders.erb
+++ b/app/views/manager/orders.erb
@@ -1,37 +1,12 @@
-<%= stylesheet_link_tag 'table' %>
+<h1 class="zagatpage" align="center">Редактирование заказов</h1>
 
-<h1>Заказы</h1>
-<table class="table" border="1" cellspacing="0" cellpadding="4">
-  <tr>
-    <td>№ договора</td>
-    <td>Организация</td>
-    <td>ФИО заказчика</td>
-    <td>Телефон</td>
-    <td>Юридический адрес</td>
-    <td>Физический адрес</td>
-    <td>Сумма</td>
-    <td>Артикул</td>
-    <td>Состояние</td>
-    <td>Дата оформления</td>
-    <td>Срок исполнения</td>
-  </tr>
 
-  <%#if Time.now > Order.datastop%>
+<% form_for :update_type do |s| %>
+        <%= s.radio_button("type", "del", :checked => true) %>Искать для удаления<br>
+        <%= s.radio_button("type", "update") %>Искать для редактирования<br/><br/>
+       
+        <%= submit_tag "Искать" %>
+        
+    <%end%>
+    
 
-    <% for order in Order.find(:all) %>
-    <tr>
-      <td><%= order.d_no %></td>
-      <td><%= order.client.cl_org %></td>
-      <td><%= order.client.cl_fio %></td>
-      <td><%= order.client.cl_tel %></td>
-      <td><%= order.client.cl_adrur %></td>
-      <td><%= order.client.cl_adrfiz %></td>
-      <td><%= order.asum %></td>
-      <td> </td>
-      <td> </td>
-      <td><%= order.datago %></td>
-      <td><%= order.datastop %></td>
-    </tr>
-    <% end %>
-  <%# end %>
-</table>
