--- a/public/stylesheets/forall.css
+++ b/public/stylesheets/forall.css
@@ -1,27 +1,13 @@
-/* 
-<<<<<<< HEAD
-    Document   : forall
-    Created on : 10.05.2010, 22:11:26
-    Author     : dmitry
-=======
-    Document   : director
-    Created on : 20.04.2010, 21:17:17
-    Author     : Alena
->>>>>>> 562dc8a60f8cac891902197ebf03aa33178099cf
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
-/* 
-   TODO customize this sample style
-   Syntax recommendation http://www.w3.org/TR/REC-CSS2/
-*/
-
+.formError{color: red;}
+.fieldWithErrors {border: 1px solid red;
+                 display: table-cell;
+}
 root {
     display: block;
 }
 
 .zagolovok {
+
     font-size: 150%;
     text-decoration:underline;
 
@@ -29,18 +15,23 @@ root {
 .mainmenu{font-family: "Arial";
 font-size: 120%;
 float: left;
-
-	width: 400px;
+width: 350px;
         border-right: 3px solid black;
 }
 
-
 .right { padding-left: 370px;
-	
+
 }
 
 li{
  list-style-type: none;}
 
 a {color: black;
-}
+text-decoration: none}
+
+.zagmin {font-size: 120%;
+font-family: Arial;}
+
+.zagatpage {font-size: 150%;
+font-family: Arial;}
+
