--- a/app/views/manager/catalogs.erb
+++ b/app/views/manager/catalogs.erb
@@ -6,7 +6,7 @@
     <td>Цвет</td>
     <td>Длина</td>
     <td>Шины</td>
-    <td>Цена</td>
+    <td>Цена,руб</td>
   </tr>
 <% for description in Description.find(:all) %>
   <tr>
