--- a/app/views/manager/deldelivery.erb
+++ b/app/views/manager/deldelivery.erb
@@ -11,18 +11,18 @@
     <td>Артикул комплектующего</td>
     <td></td>
   </tr>
-  <% form_for :del do %>
-  <% for u in PartsProvider.find(:all)  %>
+  <% form_for :deldeliv do %>
+  <% for pp in PartsProvider.find(:all)  %>
     <tr>
-      <td><%= u.provider.p_org %></td>
-      <td><%= u.provider.p_fio %></td>
-      <td><%= u.provider.p_adrur %></td>
-      <td><%= u.provider.p_adrfiz %></td>
-      <td><%= u.provider.p_tel %></td>
-      <td><%= u.provider.p_inn %></td>
-      <td><%= u.cost%></td>
-      <td><%= u.art %> </td>
-      <td><%= check_box :del, u.id %>Удалить</td>
+      <td><%= pp.provider.p_org%></td>
+      <td><%= pp.provider.p_fio%></td>
+      <td><%= pp.provider.p_adrur%></td>
+      <td><%= pp.provider.p_adrfiz%></td>
+      <td><%= pp.provider.p_tel%></td>
+      <td><%= pp.provider.p_inn%></td>
+      <td><%= pp.cost%></td>
+      <td><%= pp.art %> </td>
+      <td><%= check_box :deldeliv, pp.id %>Удалить</td>
     </tr>
     <% end %>
 </table>
